引入Android5.0 新控件CardView的功能和效果，但是运行起来报错。由于cardView的R文件引入有点问题

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,10 @@
     <string name="app_name">CC</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="cardview_contents">
+        这是一个CardView控件，CardView控件可以显示阴影和圆角效果。\n\n
+        这个Demo演示了CardView控件的用法。
+
+    </string>
 
 </resources>
