--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,6 @@
     </string>
     <string name="title_activity_list_view_both">ListViewBothActivity</string>
     <string name="title_activity_list_view_activity">ListViewActivity</string>
+    <string name="title_activity_list_view_header">ListViewHeaderActivity</string>
 
 </resources>
