--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,6 @@
     <string name="simple_string_list">Simple String List</string>
     <string name="custom_adapter_list">Custom Adapter List</string>
     <string name="custom_adapter_list_with_dividers">Custom Adapter List with dividers</string>
+    <string name="title_activity_swipe_list_view">SwipeListViewActivity</string>
 
 </resources>
