--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,15 +9,16 @@
         这个Demo演示了CardView控件的用法。
     </string>
 
-    <string name="title_activity_list_view_both">ListViewBothActivity</string>
+    <string name="title_activity_list_view_both">集成下拉刷新和上拉加载更多</string>
     <string name="title_activity_list_view_activity">ListViewActivity</string>
-    <string name="title_activity_list_view_header">ListViewHeaderActivity</string>
-    <string name="title_activity_horizontal_list_view">HorizontalListViewActivity</string>
+    <string name="title_activity_list_view_header">StickyHeaderListView</string>
+    <string name="title_activity_horizontal_list_view">HorizontalListView</string>
 
     <string name="simple_string_list">Simple String List</string>
     <string name="custom_adapter_list">Custom Adapter List</string>
     <string name="custom_adapter_list_with_dividers">Custom Adapter List with dividers</string>
-    <string name="title_activity_swipe_list_view">SwipeListViewActivity</string>
+    <string name="title_activity_swipe_list_view">SwipeListView</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_timeline_list">TimelineListActivity</string>
 
 </resources>
