圆形圆角绘制 by bitmapShader

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,6 @@
     <string name="title_activity_timeline_list">TimelineListActivity</string>
     <string name="title_activity_vertical_timeline">VerticalTimelineActivity</string>
     <string name="title_activity_slide_menu_qq5">SlideMenuQQ5Activity</string>
+    <string name="title_activity_image_painting">ImagePaintingActivity</string>
 
 </resources>
