完成Gson的学习

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,6 @@
     <string name="title_activity_vertical_timeline">VerticalTimelineActivity</string>
     <string name="title_activity_slide_menu_qq5">SlideMenuQQ5Activity</string>
     <string name="title_activity_image_painting">ImagePaintingActivity</string>
+    <string name="title_activity_gson">GsonActivity</string>
 
 </resources>
