--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,6 @@
     <string name="title_activity_slide_menu_qq5">SlideMenuQQ5Activity</string>
     <string name="title_activity_image_painting">ImagePaintingActivity</string>
     <string name="title_activity_gson">GsonActivity</string>
+    <string name="title_activity_image_color_change">ImageColorChangeActivity</string>
 
 </resources>
