--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,6 @@
     <string name="title_activity_gson">GsonActivity</string>
     <string name="title_activity_image_color_change">ImageColorChangeActivity</string>
     <string name="title_activity_facepp_test_your_face">FaceppTestYourFaceActivity</string>
+    <string name="title_activity_shape_image_view">ShapeImageViewActivity</string>
 
 </resources>
