--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,5 +83,23 @@
     <string name="indeterminate_horizontal_progress_toolbar">Indeterminate horizontal</string>
     <string name="title_activity_view_pager_with_tranform_anim">ViewPagerWithTranformAnimActivity
     </string>
+    <string name="title_activity_jazzy_view_pager_test">JazzyViewPagerTestActivity</string>
+
+
+    <string-array name="jazzy_effects">
+        <item>Standard</item>
+        <item>Tablet</item>
+        <item>CubeIn</item>
+        <item>CubeOut</item>
+        <item>FlipVertical</item>
+        <item>FlipHorizontal</item>
+        <item>Stack</item>
+        <item>ZoomIn</item>
+        <item>ZoomOut</item>
+        <item>RotateUp</item>
+        <item>RotateDown</item>
+        <item>Accordion</item>
+    </string-array>
+
 
 </resources>
